# computercraft-sync

./: .gitattributes  Cargo.toml  LICENSE  README.md  build.rs
ingame-client/: libdeflate.lua  sync.lua
lua/: base85.lua  libdeflate.lua  llz4.lua  sync.lua
server/: package.json
server/src/: main.ts
server/src/classes/: server.ts
src/: files.rs  main.rs  structs.rs  util.rs
src/rules/: mod.rs  prefix_requires.rs
src/server/: file_watcher.rs  mod.rs  server.rs  util.rs
src/server/handlers/: downloads.rs  mod.rs  root.rs  websocket.rs
