[package]
name = "computercraft-sync"
version = "0.1.1"
edition = "2024"
build = "build.rs"

[dependencies]
async-compat = "0.2.5"
base85 = "2.0.0"
darklua = "0.17.3"
flate2 = { version = "1.1.8", features = ["zlib-rs"], default-features = false }
futures-util = "0.3.31"
itertools = "0.14.0"
lz4_flex = "0.12.0"
notify = "8.2.0"
ohkami = { version = "0.24.5", features = ["rt_tokio", "ws"] }
parking_lot = "0.12.5"
rand = { version = "0.9.2" }
rapidhash = "4.2.1"
reverse-ssh = "0.2.0"
rmp-serde = "1.3.1"
ron = "0.12.0"
serde = "1.0.228"
serde_json = "1.0.149"
stacker = "0.1.22"
tokio = { version = "1.49.0", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
reqwest = "0.13.2"

[build-dependencies]
darklua = "0.17.3"
